{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 413,
  "lineage": "d8cb7662-d940-bf56-cef6-eaa2690c3260",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ab536c1f05fd29e",
            "arn": "arn:aws:ec2:us-east-2:975050147953:elastic-ip/eipalloc-04ab536c1f05fd29e",
            "association_id": "eipassoc-0b0d132dbf7c22046",
            "domain": "vpc",
            "id": "eipalloc-04ab536c1f05fd29e",
            "network_border_group": "us-east-2",
            "network_interface": "eni-03ab761b84940d408",
            "private_dns": "ip-10-0-1-89.us-east-2.compute.internal",
            "private_ip": "10.0.1.89",
            "public_dns": "ec2-18-116-248-162.us-east-2.compute.amazonaws.com",
            "public_ip": "18.116.248.162",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050147953:internet-gateway/igw-014b38ba327f2ad09",
            "id": "igw-014b38ba327f2ad09",
            "owner_id": "975050147953",
            "vpc_id": "vpc-02609e350dd10661c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:975050147953:loadbalancer/app/fuelmaxpro-alb/69cce218f6397bcf",
            "arn_suffix": "app/fuelmaxpro-alb/69cce218f6397bcf",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "fuelmaxpro-alb-599700848.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:975050147953:loadbalancer/app/fuelmaxpro-alb/69cce218f6397bcf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fuelmaxpro-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08e40327f6768fd43"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03bf9e85def91cbc7"
              },
              {
                "subnet_id": "subnet-086aa71c4f3f15fd9"
              }
            ],
            "subnets": [
              "subnet-03bf9e85def91cbc7",
              "subnet-086aa71c4f3f15fd9"
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "fuelmaxpro-alb"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "fuelmaxpro-alb"
            },
            "vpc_id": "vpc-02609e350dd10661c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:975050147953:listener/app/fuelmaxpro-alb/69cce218f6397bcf/e4b6011ceb1099eb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:975050147953:listener/app/fuelmaxpro-alb/69cce218f6397bcf/e4b6011ceb1099eb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:975050147953:loadbalancer/app/fuelmaxpro-alb/69cce218f6397bcf",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:975050147953:listener/app/fuelmaxpro-alb/69cce218f6397bcf/2910801d5d34dda0",
            "certificate_arn": "arn:aws:acm:us-east-2:975050147953:certificate/59971f47-49af-46d2-b215-985be2c28111",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:975050147953:targetgroup/fuelmaxpro-tg/722feb92d2b42d9d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:975050147953:listener/app/fuelmaxpro-alb/69cce218f6397bcf/2910801d5d34dda0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:975050147953:loadbalancer/app/fuelmaxpro-alb/69cce218f6397bcf",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_acm_certificate_validation.cert_validation",
            "aws_lb.alb",
            "aws_lb_target_group.tg",
            "aws_route53_record.cert_validation",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_route53_zone.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:975050147953:targetgroup/fuelmaxpro-tg/722feb92d2b42d9d",
            "arn_suffix": "targetgroup/fuelmaxpro-tg/722feb92d2b42d9d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:975050147953:targetgroup/fuelmaxpro-tg/722feb92d2b42d9d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-2:975050147953:loadbalancer/app/fuelmaxpro-alb/69cce218f6397bcf"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fuelmaxpro-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "fuelmaxpro-target-group"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "fuelmaxpro-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02609e350dd10661c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ab536c1f05fd29e",
            "association_id": "eipassoc-0b0d132dbf7c22046",
            "connectivity_type": "public",
            "id": "nat-07b307d8f672a3a27",
            "network_interface_id": "eni-03ab761b84940d408",
            "private_ip": "10.0.1.89",
            "public_ip": "18.116.248.162",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03bf9e85def91cbc7"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050147953:route-table/rtb-0a1523cb5b0972dfd",
            "id": "rtb-0a1523cb5b0972dfd",
            "owner_id": "975050147953",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07b307d8f672a3a27",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02609e350dd10661c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050147953:route-table/rtb-09b73363b64f99bfa",
            "id": "rtb-09b73363b64f99bfa",
            "owner_id": "975050147953",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014b38ba327f2ad09",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02609e350dd10661c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cfd412dc33a015c",
            "route_table_id": "rtb-0a1523cb5b0972dfd",
            "subnet_id": "subnet-0db96761fca467156"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bbe64fc3c3d13b0",
            "route_table_id": "rtb-0a1523cb5b0972dfd",
            "subnet_id": "subnet-0fcfbcda0e657b4a5"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9a50ca07b7e929d",
            "route_table_id": "rtb-09b73363b64f99bfa",
            "subnet_id": "subnet-03bf9e85def91cbc7"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a288d5aa117e56e",
            "route_table_id": "rtb-09b73363b64f99bfa",
            "subnet_id": "subnet-086aa71c4f3f15fd9"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050147953:security-group/sg-08e40327f6768fd43",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e40327f6768fd43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "975050147953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fuelmaxpro-alb-sg"
            },
            "tags_all": {
              "Name": "fuelmaxpro-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02609e350dd10661c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050147953:security-group/sg-0f1f92f0f5b126f55",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1f92f0f5b126f55",
            "ingress": [
              {
                "cidr_blocks": [
                  "46.110.50.2/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08e40327f6768fd43"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "975050147953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fuelmaxpro-ec2-sg"
            },
            "tags_all": {
              "Name": "fuelmaxpro-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02609e350dd10661c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050147953:security-group/sg-0bd49d66f7f7f7639",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd49d66f7f7f7639",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f1f92f0f5b126f55"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "975050147953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fuelmaxpro-rds-sg"
            },
            "tags_all": {
              "Name": "fuelmaxpro-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02609e350dd10661c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050147953:subnet/subnet-09bf8d450b9b232a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bf8d450b9b232a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050147953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-0"
            },
            "tags_all": {
              "Name": "db-0"
            },
            "vpc_id": "vpc-02609e350dd10661c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050147953:subnet/subnet-0393990d128ec750f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0393990d128ec750f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050147953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-1"
            },
            "tags_all": {
              "Name": "db-1"
            },
            "vpc_id": "vpc-02609e350dd10661c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050147953:subnet/subnet-0db96761fca467156",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db96761fca467156",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050147953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-0"
            },
            "tags_all": {
              "Name": "private-0"
            },
            "vpc_id": "vpc-02609e350dd10661c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050147953:subnet/subnet-0fcfbcda0e657b4a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcfbcda0e657b4a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050147953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-1"
            },
            "tags_all": {
              "Name": "private-1"
            },
            "vpc_id": "vpc-02609e350dd10661c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050147953:subnet/subnet-03bf9e85def91cbc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bf9e85def91cbc7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050147953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-0"
            },
            "tags_all": {
              "Name": "public-0"
            },
            "vpc_id": "vpc-02609e350dd10661c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050147953:subnet/subnet-086aa71c4f3f15fd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086aa71c4f3f15fd9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050147953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1"
            },
            "tags_all": {
              "Name": "public-1"
            },
            "vpc_id": "vpc-02609e350dd10661c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050147953:vpc/vpc-02609e350dd10661c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-010963b4a98ea0ace",
            "default_route_table_id": "rtb-0cb15961b3e7dd4d0",
            "default_security_group_id": "sg-059535a163ac5ab7e",
            "dhcp_options_id": "dopt-0e640a95418610b8d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02609e350dd10661c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cb15961b3e7dd4d0",
            "owner_id": "975050147953",
            "tags": {
              "Name": "fuelmaxpro-vpc"
            },
            "tags_all": {
              "Name": "fuelmaxpro-vpc"
            }
          }
        }
      ]
    }
  ]
}